# ml-gcp-deployment

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  serve.py
.github/workflows/: ci_cd_pipeline.yml
k8s/: deployment.yaml  kustomization.yaml  service.yaml
model/: metrics.json  model.bst
scripts/: build_image.sh  run_image.sh  test_inference.sh
tests/: test_model.py
tests/data/: baseline_metrics.json
tests/dataset/: data.csv  target.csv
